<resources>
    <string name="app_name">Система трекинга персонала</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintEditText">Введите данные</string>
    <string name="hintEditButton">Отправить</string>
    <string name="editTextHeader">Отправка данных</string>
    <string name="unnamed_device">Unnamed</string>
    <string name="hintDisconnectButton">Отключиться</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="GetData">Получение данных</string>
    <string name="GetDataButton">Получить</string>
</resources>